Update header title and fix missing newline

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📈 Cron Capital Portfolio</h1>
+            <h1>📈 Cron Capital</h1>
             <div class="summary" id="summary"></div>
         </div>
         <div class="stocks-grid" id="stocksGrid"></div>
