Add target price calculation to stock info

--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
                             <span class="info-value">$${stock.now_price.toFixed(2)}</span>
                         </div>
                         <div class="info-row">
+                            <span class="info-label">Target Price</span>
+                            <span class="info-value">$${(stock.avg_price * 1.1).toFixed(2)}</span>
+                        </div>
+                        <div class="info-row">
                             <span class="info-label">Total Cost</span>
                             <span class="info-value">$${totalCost.toFixed(2)}</span>
                         </div>
