--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
         }
 
         function displaySummary(data) {
-            // 총 매입 금액 계산
-            let totalCost = 0;
+            // 예수금 계산
+            let availableCash = data.total_value;
             for (const stock of Object.values(data.stocks)) {
-                totalCost += stock.qty * stock.avg_price;
+                availableCash -= stock.qty * stock.avg_price;
             }
 
             document.getElementById('summary').innerHTML = `
@@ -238,8 +238,8 @@
                     <div class="value">$${data.total_value.toFixed(2)}</div>
                 </div>
                 <div class="summary-item">
-                    <label>Total Cost</label>
-                    <div class="value">$${totalCost.toFixed(2)}</div>
+                    <label>Available Cash</label>
+                    <div class="value">$${availableCash.toFixed(2)}</div>
                 </div>
                 <div class="summary-item">
                     <label>Exchange Rate</label>
