--- a/index.html
+++ b/index.html
@@ -253,13 +253,15 @@
         }
 
         function formatDate(date) {
-            const year = date.getFullYear();
-            const month = String(date.getMonth() + 1).padStart(2, '0');
-            const day = String(date.getDate()).padStart(2, '0');
-            const hours = String(date.getHours()).padStart(2, '0');
-            const minutes = String(date.getMinutes()).padStart(2, '0');
+            // UTC to KST (UTC+9)
+            const kstDate = new Date(date.getTime() + (9 * 60 * 60 * 1000));
+            const year = kstDate.getUTCFullYear();
+            const month = String(kstDate.getUTCMonth() + 1).padStart(2, '0');
+            const day = String(kstDate.getUTCDate()).padStart(2, '0');
+            const hours = String(kstDate.getUTCHours()).padStart(2, '0');
+            const minutes = String(kstDate.getUTCMinutes()).padStart(2, '0');
             
-            return `${year}-${month}-${day} ${hours}:${minutes}`;
+            return `${year}-${month}-${day} ${hours}:${minutes} KST`;
         }
 
         async function loadPortfolioData() {
