Change KST indicator to Korean flag emoji

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             const hours = String(kstDate.getUTCHours()).padStart(2, '0');
             const minutes = String(kstDate.getUTCMinutes()).padStart(2, '0');
             
-            return `${year}-${month}-${day} ${hours}:${minutes} KST`;
+            return `${year}-${month}-${day} ${hours}:${minutes} 🇰🇷`;
         }
 
         async function loadPortfolioData() {
