--- a/index.html
+++ b/index.html
@@ -38,17 +38,21 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 20px;
+            gap: 20px;
         }
 
         .header h1 {
             color: #333;
             font-size: 28px;
+            white-space: nowrap;
         }
 
         .last-update {
             color: #666;
-            font-size: 14px;
+            font-size: 13px;
             text-align: right;
+            white-space: nowrap;
+            flex-shrink: 0;
         }
 
         .last-update .label {
