Align text to the right for last-update class
Added text alignment to the last-update class.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         .last-update {
             color: #666;
             font-size: 14px;
+            text-align: right;
         }
 
         .last-update .label {
