Fix missing newline at end of index.html
Add newline at the end of index.html

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         .summary-item .value {
             font-size: 24px;
             font-weight: bold;
+            text-align: right;
         }
 
         .stocks-grid {
