--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
 
         .summary {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             gap: 15px;
             margin-top: 20px;
+            max-width: 600px;
         }
 
         .summary-item {
