--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             // 예수금 계산
             let availableCash = data.total_value;
             for (const stock of Object.values(data.stocks)) {
-                availableCash -= stock.qty * stock.avg_price;
+                availableCash -= stock.qty * stock.now_price;
             }
 
             // 환율 표시
